<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <!-- D I S P L A Y -->

        <EditText
            android:id="@+id/edit_display"
            style="@style/style_display"
            android:gravity="end"
            android:inputType="numberDecimal|numberSigned|number"
            android:textIsSelectable="true"
            />

        <!-- Botões da calculadora -->

        <TableLayout style="@style/table_style">

            <TableRow>

                <Button
                    android:onClick="quadradoOnClick"
                    style="@style/button_style"
                    android:text="@string/quadrado" />

                <Button
                    android:onClick="cuboOnClick"
                    style="@style/button_style"
                    android:text="@string/cubo" />

                <Button
                    android:id="@+id/button_potencia"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/xy" />

                <Button
                    android:onClick="ceOnClick"
                    style="@style/button_style"
                    android:text="@string/ce" />
            </TableRow>

            <TableRow>

                <Button
                    android:onClick="raizOnClick"
                    style="@style/button_style"
                    android:text="@string/raiz" />

                <Button
                    android:onClick="fatorialOnClick"
                    style="@style/button_style"
                    android:text="@string/fatorial" />

                <Button
                    android:onClick="porcentagemOnClick"
                    style="@style/button_style"
                    android:text="@string/porcentagem" />

                <Button
                    android:id="@+id/button_modulo"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/modulo" />


            </TableRow>

            <TableRow>

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/sete" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/oito" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/nove" />

                <Button
                    android:onClick="bsOnClick"
                    style="@style/button_style"
                    android:text="@string/backspace" />

            </TableRow>

            <TableRow>

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/quatro" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/cinco" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/seis" />

                <Button
                    android:id="@+id/button_divisao"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/divisao" />

            </TableRow>

            <TableRow>

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/um" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/dois" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/tres" />

                <Button
                    android:id="@+id/button_mult"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/multiplicacao" />

            </TableRow>

            <TableRow>

                <Button
                    android:onClick="maisMenosOnClick"
                    style="@style/button_style"
                    android:text="@string/mais_menos" />

                <Button
                    android:onClick="numberOnClick"
                    style="@style/button_style"
                    android:text="@string/zero"
                    android:id="@+id/button" />

                <Button
                    android:onClick="pontoOnClick"
                    style="@style/button_style"
                    android:text="@string/ponto" />

                <Button
                    android:id="@+id/button_adicao"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/adicao" />

            </TableRow>

            <TableRow>

                <Button
                    android:onClick="igualOnClick"
                    style="@style/button_style"
                    android:layout_weight="1"
                    android:text="@string/igual" />

                <Button
                    android:id="@+id/button_sub"
                    android:onClick="opOnClick"
                    style="@style/button_style"
                    android:text="@string/subtracao" />

            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>